Started creating filed and code
